--- a/app/views/layouts/styleguide_page.html.haml
+++ b/app/views/layouts/styleguide_page.html.haml
@@ -27,7 +27,7 @@
   %section.sg-body
     = yield
 
-  %script{src: "http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery-1.8.0.min.js"}
+  -# %script{src: "http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.0/jquery-1.8.0.min.js"}
   %script{src: "http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.js"}
   %link{href: "http://google-code-prettify.googlecode.com/svn/trunk/src/prettify.css", type: "text/css", rel: "stylesheet"}
   :javascript
