--- a/lib/generators/templates/styleguide.html.haml
+++ b/lib/generators/templates/styleguide.html.haml
@@ -16,3 +16,10 @@
 
 %body
   = yield :body  if content_for?(:body)
+  = javascript_include_tag "kss"
+  :javascript
+      $(function(){
+        $('a[href=#]').click(function(){
+          return false;
+        })
+      });
