--- a/app/views/layouts/styleguide_page.html.haml
+++ b/app/views/layouts/styleguide_page.html.haml
@@ -13,7 +13,7 @@
   %aside.sg-toc
     %h1
       %strong= styleguide_title
-      %small Style guide
+      %small StyleGuide
 
     %ul
       - styleguide_sections.each do |id, name|
