--- a/app/assets/stylesheets/styleguide.sass
+++ b/app/assets/stylesheets/styleguide.sass
@@ -325,11 +325,12 @@ body.sg-full
     ol
       margin-bottom: 1.4em
     li
-      line-height: 1.6
-      margin-bottom: .4em
+      line-height: 1.8
+      margin-bottom: .8em
     code
       display: inline-block
-      color: #000
+      color: #575650
+      font-size: 10pt
     pre
       margin-bottom: 1.4em
       display: block
@@ -338,6 +339,8 @@ body.sg-full
         padding: 8px 16px
         line-height: 2
         font-size: 11pt
+        margin-right: 0
+        margin-left: 0
     hr
       display: block
       height: 5px
