--- a/lib/generators/templates/styleguide.html.haml
+++ b/lib/generators/templates/styleguide.html.haml
@@ -9,6 +9,7 @@
   %head
     %meta{charset: 'utf-8'}
     %title Styleguides
+    = javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js'
     = stylesheet_link_tag 'application'
     /[if lt IE 9]
       %script{src: 'http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6/html5shiv.min.js'}
